deployment-vanilla/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: simple.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-frontend
            port:
              number: 80
